--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
 MAINTAINER steve.g.szabo@gmail.com
 
+ENV WEBAPP_VERSION=1.0.2
+
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y curl python3 python3-pip gunicorn && \
