--- a/images/Dockerfile.flask
+++ b/images/Dockerfile.flask
@@ -3,6 +3,6 @@ MAINTAINER steve.g.szabo@gmail.com
 
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y curl python3 python3-pip gunicorn && \
+    apt-get install -y curl wget python3 python3-pip gunicorn && \
     apt-get clean && \
     pip3 install flask
