--- a/calico/deploy.client.yaml
+++ b/calico/deploy.client.yaml
@@ -1,4 +1,22 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: client
+  namespace: webapp
+  labels:
+    app: client
+spec:
+  type: ClusterIP
+  selector:
+    app: client
+  ports:
+  - name: client
+    protocol: TCP
+    port: 80
+    targetPort: 8080
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
