--- a/calico/policy.webapp.yaml
+++ b/calico/policy.webapp.yaml
@@ -14,6 +14,28 @@ spec:
 apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
 metadata:
+  name: rogue
+  namespace: webapp
+spec:
+  selector: app == 'rogue'
+  types:
+  - Egress
+  egress:
+  - action: Allow
+    metadata:
+      annotations:
+        desc: Allow egress from rogue to client
+    protocol: TCP
+    destination:
+      selector: app == 'client'
+      namespaceSelector: projectcalico.org/name == 'webapp'
+      ports:
+      - 9090
+
+---
+apiVersion: projectcalico.org/v3
+kind: NetworkPolicy
+metadata:
   name: client
   namespace: webapp
 spec:
@@ -41,6 +63,18 @@ spec:
       selector: zone == 'on-prem'
       ports:
       - 443
+  ingress:
+  - action: Allow
+    metadata:
+      annotations:
+        desc: Allow ingress from rogue to client
+    protocol: TCP
+    source:
+      selector: app == 'rogue'
+      namespaceSelector: projectcalico.org/name == 'webapp'
+    destination:
+      ports:
+      - 9090
 
 ---
 apiVersion: projectcalico.org/v3
