--- a/calico/deploy.webapp.yaml
+++ b/calico/deploy.webapp.yaml
@@ -8,7 +8,7 @@ metadata:
     app: webapp
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
