--- a/calico/deploy.rogue.yaml
+++ b/calico/deploy.rogue.yaml
@@ -1,4 +1,28 @@
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: rogue
+  namespace: webapp
+  labels:
+    app: rogue
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /rogue(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: rogue
+            port:
+              number: 80
+
+---
 apiVersion: v1
 kind: Service
 metadata:
