--- a/calico/policy.global.yaml
+++ b/calico/policy.global.yaml
@@ -4,7 +4,7 @@ kind: GlobalNetworkPolicy
 metadata:
   name: default-deny
 spec:
-  namespaceSelector: projectcalico.org/name in {'webapp', 'nginx-ingress'}
+  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name in {'webapp', 'nginx-ingress'}
   types:
   - Egress
   - Ingress
