--- a/skaffold/hashi-demo/deploy.hashi-web.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-web.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: hashi-demo
     tier: presentation
+    version: v1
 spec:
   selector:
     matchLabels:
@@ -17,6 +18,7 @@ spec:
       labels:
         app: hashi-demo
         tier: presentation
+        version: v1
       annotations:
         kubernetes.io/change-cause: "001"
     spec:
@@ -64,6 +66,7 @@ spec:
   selector:
     tier: presentation
   ports:
-  - port: 8080
+  - name: http
+    port: 8080
     targetPort: 80
     protocol: TCP
