--- a/skaffold/hashi-demo/deploy.hashi-app.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-app.yaml
@@ -72,9 +72,27 @@ metadata:
 spec:
   type: ClusterIP
   selector:
+    app: hashi-demo
     tier: application
   ports:
   - name: http
     port: 5000
     targetPort: 5000
     protocol: TCP
+
+---
+apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: application
+  labels:
+    app: hashi-demo
+    tier: application
+spec:
+  host: application.hashi-demo.svc.cluster.local
+  subsets:
+  - name: v1
+    labels:
+      app: hashi-demo
+      tier: application
+      version: v1
