--- a/skaffold/hashi-demo/deploy.hashi-data.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-data.yaml
@@ -69,9 +69,27 @@ metadata:
 spec:
   type: ClusterIP
   selector:
+    app: hashi-demo
     tier: data
   ports:
   - name: tcp
     port: 5432
     targetPort: 5432
     protocol: TCP
+
+---
+apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: data
+  labels:
+    app: hashi-demo
+    tier: data
+spec:
+  host: data.hashi-demo.svc.cluster.local
+  subsets:
+  - name: v1
+    labels:
+      app: hashi-demo
+      tier: data
+      version: v1
