--- a/skaffold/hashi-demo/deploy.hashi-ingress.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-ingress.yaml
@@ -19,3 +19,55 @@ spec:
             name: presentation
             port:
               number: 8080
+
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: hashi-demo
+  labels:
+    app: hashi-demo
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+  - port:
+      number: 443
+      name: https
+      protocol: HTTPS
+    tls:
+      mode: SIMPLE
+      credentialName: hashi-demo-credential
+    hosts:
+    - hashi-demo.example.com
+
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: hashi-demo
+  labels:
+    app: hashi-demo
+spec:
+  hosts:
+  - presentation.hashi-demo.svc.cluster.local
+  - hashi-demo.example.com
+  gateways:
+  - hashi-demo
+  - mesh
+  http:
+  - match:
+    - uri:
+        prefix: /
+    route:
+    - destination:
+        host: presentation.hashi-demo.svc.cluster.local
+        subset: v1
+        port:
+          number: 8080
+      weight: 100
+    timeout: 60s
+    retries:
+      attempts: 3
+      perTryTimeout: 5s
+      retryOn: gateway-error,connect-failure,refused-stream
