--- a/skaffold/hashi-demo/deploy.hashi-data.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-data.yaml
@@ -28,7 +28,7 @@ spec:
           claimName: hashi-demo
       containers:
       - name: data
-        image: 192.168.56.101:5000/hashi-demo/hashi-demo-data:latest
+        image: 192.168.56.101:5000/hashi-demo/hashi-demo-data:dfd2e2b-dirty
         volumeMounts:
         - name: hashi-demo
           mountPath: /database
@@ -93,3 +93,25 @@ spec:
       app: hashi-demo
       tier: data
       version: v1
+
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: data
+  labels:
+    app: hashi-demo
+    tier: data
+spec:
+  hosts:
+  - data.hashi-demo.svc.cluster.local
+  gateways:
+  - mesh
+  tcp:
+  - route:
+    - destination:
+        host: data.hashi-demo.svc.cluster.local
+        subset: v1
+        port:
+          number: 5432
+      weight: 100
