--- a/skaffold/hashi-demo/deploy.hashi-web.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-web.yaml
@@ -4,20 +4,19 @@ kind: Deployment
 metadata:
   name: presentation
   labels:
-    app: hashi-demo
-    tier: presentation
+    app: presentation
     version: v1
 spec:
   selector:
     matchLabels:
-      tier: presentation
+      app: presentation
+      version: v1
   replicas: 1
   template:
     metadata:
       name: presentation
       labels:
-        app: hashi-demo
-        tier: presentation
+        app: presentation
         version: v1
       annotations:
         kubernetes.io/change-cause: "001"
@@ -59,13 +58,11 @@ kind: Service
 metadata:
   name: presentation
   labels:
-    app: hashi-demo
-    tier: presentation
+    app: presentation
 spec:
   type: ClusterIP
   selector:
-    app: hashi-demo
-    tier: presentation
+    app: presentation
   ports:
   - name: http
     port: 80
@@ -78,15 +75,13 @@ kind: DestinationRule
 metadata:
   name: presentation
   labels:
-    app: hashi-demo
-    tier: presentation
+    app: presentation
 spec:
   host: presentation.hashi-demo.svc.cluster.local
   subsets:
   - name: v1
     labels:
-      app: hashi-demo
-      tier: presentation
+      app: presentation
       version: v1
 
 ---
@@ -95,8 +90,7 @@ kind: VirtualService
 metadata:
   name: presentation
   labels:
-    app: hashi-demo
-    tier: presentation
+    app: presentation
 spec:
   hosts:
   - presentation.hashi-demo.svc.cluster.local
