--- a/calico/deploy.rogue.yaml
+++ b/calico/deploy.rogue.yaml
@@ -69,7 +69,7 @@ spec:
     spec:
       containers:
       - name: rogue
-        image: 192.168.56.101:5000/webapp:1.0.8
+        image: notebook.local:5000/webapp:1.0.8
         ports:
         - name: rogue
           protocol: TCP
