--- a/images/Dockerfile.webapp
+++ b/images/Dockerfile.webapp
@@ -1,4 +1,4 @@
-FROM 192.168.56.101:5000/ubuntu-flask:latest
+FROM notebook.local:5000/ubuntu-flask:latest
 MAINTAINER steve.g.szabo@gmail.com
 
 ENV WEBAPP_VERSION=1.0.16
