--- a/skaffold/hashi-demo/deploy.hashi-data.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-data.yaml
@@ -27,7 +27,7 @@ spec:
           claimName: hashi-demo
       containers:
       - name: data
-        image: 192.168.56.101:5000/hashi-demo/hashi-demo-data:dfd2e2b-dirty
+        image: notebook.local:5000/hashi-demo/hashi-demo-data:dfd2e2b-dirty
         volumeMounts:
         - name: hashi-demo
           mountPath: /database
