--- a/skaffold/hashi-demo/deploy.hashi-web.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-web.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: presentation
-        image: 192.168.56.101:5000/hashi-demo/hashi-demo-web:dfd2e2b-dirty
+        image: notebook.local:5000/hashi-demo/hashi-demo-web:dfd2e2b-dirty
         env:
         - name: APPLICATION_BACK
           value: "application.hashi-demo.svc.cluster.local:5000"
