--- a/skaffold/hashi-demo/skaffold.yaml
+++ b/skaffold/hashi-demo/skaffold.yaml
@@ -4,15 +4,15 @@ metadata:
   name: hashi-demo
 build:
   artifacts:
-  - image: 192.168.56.101:5000/hashi-demo/hashi-demo-app
+  - image: notebook.local:5000/hashi-demo/hashi-demo-app
     context: app-tier
     docker:
       dockerfile: Dockerfile
-  - image: 192.168.56.101:5000/hashi-demo/hashi-demo-data
+  - image: notebook.local:5000/hashi-demo/hashi-demo-data
     context: db-tier
     docker:
       dockerfile: Dockerfile
-  - image: 192.168.56.101:5000/hashi-demo/hashi-demo-web
+  - image: notebook.local:5000/hashi-demo/hashi-demo-web
     context: frontend-tier
     docker:
       dockerfile: Dockerfile
