--- a/istio/istio.ingress.yaml
+++ b/istio/istio.ingress.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: webapp
+  labels:
+    app: webapp
 spec:
   selector:
     istio: ingressgateway
@@ -22,6 +24,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp
+  labels:
+    app: webapp
 spec:
   selector:
     app: webapp
@@ -36,6 +40,8 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: webapp
+  labels:
+    app: webapp
 spec:
   host: webapp.demo.svc.cluster.local
   subsets:
@@ -57,6 +63,8 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: webapp
+  labels:
+    app: webapp
 spec:
   hosts:
   - webapp.demo.svc.cluster.local
