--- a/skaffold/hashi-demo/skaffold.yaml
+++ b/skaffold/hashi-demo/skaffold.yaml
@@ -19,5 +19,6 @@ build:
 deploy:
   kubectl:
     manifests:
-    - deploy.hashi-app.yaml
     - deploy.hashi-data.yaml
+    - deploy.hashi-app.yaml
+    - deploy.hashi-web.yaml
