--- a/skaffold/hashi-demo/deploy.hashi-web.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-web.yaml
@@ -21,6 +21,12 @@ spec:
         kubernetes.io/change-cause: "001"
     spec:
       containers:
+      - name: curl-backend
+        image: notebook.local:5000/webapp:latest
+        command: ["/bin/bash", "-c", "while true; do curl -v http://$HASHI_BACK/api/posts; sleep 1; done"]
+        env:
+        - name: HASHI_BACK
+          value: "application.hashi-demo.svc.cluster.local:5000"
       - name: presentation
         image: notebook.local:5000/hashi-demo/hashi-demo-web:dfd2e2b-dirty
         env:
@@ -92,10 +98,15 @@ metadata:
 spec:
   hosts:
   - presentation.hashi-demo.svc.cluster.local
+  - hashi-demo.example.com
   gateways:
+  - hashi-demo
   - mesh
   http:
-  - route:
+  - match:
+    - uri:
+        prefix: /
+    route:
     - destination:
         host: presentation.hashi-demo.svc.cluster.local
         subset: v1
