--- a/skaffold/hashi-demo/deploy.hashi-ingress-istio.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-ingress-istio.yaml
@@ -14,7 +14,7 @@ spec:
       name: https
       protocol: HTTPS
     tls:
-      mode: SIMPLE
+      mode: MUTUAL
       credentialName: hashi-demo-credential
     hosts:
     - hashi-demo.example.com
