--- a/istio/istio.peer-auth.yaml
+++ b/istio/istio.peer-auth.yaml
@@ -3,6 +3,7 @@ apiVersion: security.istio.io/v1beta1
 kind: PeerAuthentication
 metadata:
   name: webapp
+  namespace: demo
 spec:
   mtls:
     mode: STRICT
