--- a/istio/istio.ingress.yaml
+++ b/istio/istio.ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: webapp
+  namespace: demo
   labels:
     app: webapp
 spec:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp
+  namespace: demo
   labels:
     app: webapp
 spec:
@@ -40,6 +42,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: webapp
+  namespace: demo
   labels:
     app: webapp
 spec:
@@ -63,6 +66,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: webapp
+  namespace: demo
   labels:
     app: webapp
 spec:
