--- a/skaffold/hashi-demo/deploy.hashi-app-v2.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-app-v2.yaml
@@ -2,27 +2,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: application
+  name: application-v2
   labels:
     app: application
-    version: v1
+    version: v2
 spec:
   selector:
     matchLabels:
       app: application
-      version: v1
+      version: v2
   replicas: 1
   template:
     metadata:
       labels:
         app: application
-        version: v1
+        version: v2
       annotations:
         kubernetes.io/change-cause: "001"
     spec:
       containers:
       - name: application
-        image: notebook.local:5000/hashi-demo/hashi-demo-app:1.0.0
+        image: notebook.local:5000/hashi-demo/hashi-demo-app:2.0.0
         env:
         - name: POSTGRES_HOST
           value: "data.hashi-demo.svc.cluster.local"
@@ -58,54 +58,3 @@ spec:
           httpGet:
             path: /api/probe
             port: application
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: application
-  labels:
-    app: application
-spec:
-  selector:
-    app: application
-  ports:
-  - name: http
-    port: 5000
-    targetPort: 5000
-    protocol: TCP
-
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: application
-  labels:
-    app: application
-spec:
-  host: application.hashi-demo.svc.cluster.local
-  subsets:
-  - name: v1
-    labels:
-      app: application
-      version: v1
-
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: application
-  labels:
-    app: application
-spec:
-  hosts:
-  - application.hashi-demo.svc.cluster.local
-  gateways:
-  - mesh
-  http:
-  - route:
-    - destination:
-        host: application.hashi-demo.svc.cluster.local
-        subset: v1
-        port:
-          number: 5000
