--- a/skaffold/hashi-demo/deploy.hashi-app.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-app.yaml
@@ -109,3 +109,8 @@ spec:
         subset: v1
         port:
           number: 5000
+    timeout: 60s
+    retries:
+      attempts: 3
+      perTryTimeout: 5s
+      retryOn: gateway-error,connect-failure,refused-stream
