--- a/skaffold/hashi-demo/deploy.hashi-web.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-web.yaml
@@ -112,3 +112,8 @@ spec:
         subset: v1
         port:
           number: 80
+    timeout: 60s
+    retries:
+      attempts: 3
+      perTryTimeout: 5s
+      retryOn: gateway-error,connect-failure,refused-stream
