--- a/skaffold/hashi-demo/deploy.hashi-app-istio.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-app-istio.yaml
@@ -24,8 +24,17 @@ metadata:
 spec:
   host: application.hashi-demo.svc.cluster.local
   trafficPolicy:
-    loadBalancer:
-      simple: RANDOM
+    connectionPool:
+      tcp:
+        maxConnections: 1
+      http:
+        http1MaxPendingRequests: 1
+        maxRequestsPerConnection: 1
+    outlierDetection:
+      consecutive5xxErrors: 1
+      interval: 1s
+      baseEjectionTime: 3m
+      maxEjectionPercent: 100
   subsets:
   - name: v1
     labels:
