--- a/skaffold/hashi-demo/deploy.hashi-app-v1.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-app-v1.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: application
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,6 +26,7 @@ spec:
       annotations:
         kubernetes.io/change-cause: "001"
     spec:
+      serviceAccountName: application
       containers:
       - name: application
         image: notebook.local:5000/hashi-demo/hashi-demo-app:1.0.0
