--- a/skaffold/hashi-demo/deploy.hashi-data.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-data.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: data
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,6 +26,7 @@ spec:
       annotations:
         kubernetes.io/change-cause: "001"
     spec:
+      serviceAccountName: data
       volumes:
       - name: hashi-demo
         persistentVolumeClaim:
