--- a/skaffold/hashi-demo/deploy.hashi-app-istio.yaml
+++ b/skaffold/hashi-demo/deploy.hashi-app-istio.yaml
@@ -76,3 +76,21 @@ spec:
       attempts: 3
       perTryTimeout: 5s
       retryOn: gateway-error,connect-failure,refused-stream
+
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: application
+spec:
+  selector:
+    matchLabels:
+      app: application
+  action: ALLOW
+  rules:
+  - from:
+    - source:
+        principals: ["cluster.local/ns/hashi-demo/sa/presentation"]
+    to:
+    - operation:
+        ports: ["5000"]
