--- a/skaffold/hashi-demo/skaffold.yaml
+++ b/skaffold/hashi-demo/skaffold.yaml
@@ -19,14 +19,14 @@ build:
 deploy:
   kubectl:
     manifests:
-    - deploy.hashi-peer-auth-istio.yaml
-    - deploy.hashi-ingress-istio.yaml
-    - deploy.hashi-data-istio.yaml
-    - deploy.hashi-app-istio.yaml
-    - deploy.hashi-web-istio.yaml
-    - deploy.hashi-policy-istio.yaml
-    - deploy.hashi-sa.yaml
-    - deploy.hashi-data.yaml
-    - deploy.hashi-app-v1.yaml
-    - deploy.hashi-app-v2.yaml
-    - deploy.hashi-web.yaml
+    - deploy/istio/deploy.hashi-peer-auth-istio.yaml
+    - deploy/istio/deploy.hashi-ingress-istio.yaml
+    - deploy/istio/deploy.hashi-data-istio.yaml
+    - deploy/istio/deploy.hashi-app-istio.yaml
+    - deploy/istio/deploy.hashi-web-istio.yaml
+    - deploy/istio/deploy.hashi-policy-istio.yaml
+    - deploy/deploy.hashi-sa.yaml
+    - deploy/deploy.hashi-data.yaml
+    - deploy/deploy.hashi-app-v1.yaml
+    - deploy/deploy.hashi-app-v2.yaml
+    - deploy/deploy.hashi-web.yaml
