--- a/skaffold/hashi-demo/deploy/deploy.hashi-data-vol.yaml
+++ b/skaffold/hashi-demo/deploy/deploy.hashi-data-vol.yaml
@@ -15,7 +15,7 @@ spec:
   storageClassName: managed-nfs-storage
   nfs:
     path: /srv/shared/hashi-demo
-    server: notebook.local
+    server: 192.168.56.101
 
 ---
 apiVersion: v1
@@ -25,9 +25,9 @@ metadata:
   labels:
     app: data
 spec:
+  storageClassName: managed-nfs-storage
   accessModes:
   - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
-  storageClassName: managed-nfs-storage
