--- a/skaffold/hashi-demo/deploy/deploy.hashi-sa.yaml
+++ b/skaffold/hashi-demo/deploy/deploy.hashi-sa.yaml
@@ -2,6 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  name: client
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
   name: presentation
 
 ---
