--- a/calico/policy.hashi-demo.yaml
+++ b/calico/policy.hashi-demo.yaml
@@ -2,6 +2,28 @@
 apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
 metadata:
+  name: client
+  namespace: hashi-demo
+spec:
+  selector: app == 'client'
+  types:
+  - Egress
+  egress:
+  - action: Allow
+    metadata:
+      annotations:
+        desc: Allow egress from client to application
+    protocol: TCP
+    destination:
+      selector: app == 'application'
+      namespaceSelector: projectcalico.org/name == 'hashi-demo'
+      ports:
+      - 5000
+
+---
+apiVersion: projectcalico.org/v3
+kind: NetworkPolicy
+metadata:
   name: presentation
   namespace: hashi-demo
 spec:
