--- a/storage/deployment.yaml
+++ b/storage/deployment.yaml
@@ -1,8 +1,16 @@
 ---
+kind: ServiceAccount
+apiVersion: v1
+metadata:
+  name: nfs-client-provisioner
+  namespace: default
+
+---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: nfs-client-provisioner
+  namespace: default
 spec:
   selector:
     matchLabels:
