--- a/storage/rbac.yaml
+++ b/storage/rbac.yaml
@@ -1,10 +1,4 @@
 ---
-kind: ServiceAccount
-apiVersion: v1
-metadata:
-  name: nfs-client-provisioner
-
----
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -42,6 +36,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: leader-locking-nfs-client-provisioner
+  namespace: default
 rules:
   - apiGroups: [""]
     resources: ["endpoints"]
@@ -52,6 +47,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: leader-locking-nfs-client-provisioner
+  namespace: default
 subjects:
   - kind: ServiceAccount
     name: nfs-client-provisioner
