--- a/skaffold/hashi-demo/deploy/deploy.hashi-web.yaml
+++ b/skaffold/hashi-demo/deploy/deploy.hashi-web.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: presentation
+  namespace: hashi-demo
   labels:
     app: presentation
     version: v1
