--- a/skaffold/hashi-demo/deploy/deploy.hashi-app-v2.yaml
+++ b/skaffold/hashi-demo/deploy/deploy.hashi-app-v2.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: application-v2
+  namespace: hashi-demo
   labels:
     app: application
     version: v2
