--- a/skaffold/hashi-demo/deploy/deploy.hashi-data-vol.yaml
+++ b/skaffold/hashi-demo/deploy/deploy.hashi-data-vol.yaml
@@ -22,6 +22,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: hashi-demo
+  namespace: hashi-demo
   labels:
     app: data
 spec:
