--- a/skaffold/hashi-demo/deploy/deploy.hashi-ingress-nginx.yaml
+++ b/skaffold/hashi-demo/deploy/deploy.hashi-ingress-nginx.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hashi-demo
+  namespace: hashi-demo
   labels:
     app: hashi-demo
   annotations:
