--- a/skaffold/hashi-demo/deploy/istio/deploy.hashi-app-istio.yaml
+++ b/skaffold/hashi-demo/deploy/istio/deploy.hashi-app-istio.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: application
+  namespace: hashi-demo
   labels:
     app: application
 spec:
@@ -19,6 +20,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: application
+  namespace: hashi-demo
   labels:
     app: application
 spec:
@@ -38,6 +40,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: application
+  namespace: hashi-demo
   labels:
     app: application
 spec:
