--- a/skaffold/hashi-demo/deploy/istio/deploy.hashi-data-istio.yaml
+++ b/skaffold/hashi-demo/deploy/istio/deploy.hashi-data-istio.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: data
+  namespace: hashi-demo
   labels:
     app: data
 spec:
@@ -19,6 +20,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: data
+  namespace: hashi-demo
   labels:
     app: data
 spec:
@@ -42,6 +44,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: data
+  namespace: hashi-demo
   labels:
     app: data
 spec:
