--- a/skaffold/hashi-demo/deploy/istio/deploy.hashi-egress-istio.yaml
+++ b/skaffold/hashi-demo/deploy/istio/deploy.hashi-egress-istio.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: google
+  namespace: hashi-demo
   labels:
     app: google
 spec:
@@ -23,6 +24,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
   name: google
+  namespace: hashi-demo
   labels:
     app: google
 spec:
@@ -39,6 +41,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: google
+  namespace: hashi-demo
   labels:
     app: google
 spec:
@@ -51,6 +54,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: google
+  namespace: hashi-demo
   labels:
     app: google
 spec:
