--- a/skaffold/hashi-demo/deploy/istio/deploy.hashi-ingress-istio.yaml
+++ b/skaffold/hashi-demo/deploy/istio/deploy.hashi-ingress-istio.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: hashi-demo
+  namespace: hashi-demo
   labels:
     app: hashi-demo
 spec:
