--- a/skaffold/hashi-demo/deploy/istio/deploy.hashi-web-istio.yaml
+++ b/skaffold/hashi-demo/deploy/istio/deploy.hashi-web-istio.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: presentation
+  namespace: hashi-demo
   labels:
     app: presentation
 spec:
@@ -19,6 +20,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: presentation
+  namespace: hashi-demo
   labels:
     app: presentation
 spec:
@@ -34,6 +36,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: presentation
+  namespace: hashi-demo
   labels:
     app: presentation
 spec:
